[package]
name = "ehviewer-x"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.25.0", features = ["full"] }
reqwest = { version = "0.11.14", features = ["json", "cookies"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
regex = "1.7.1"
visdom = "0.5.9"
chrono = "0.4.23"
once_cell = "1.17.0"

[dev-dependencies]
rand = "0.8.5"
